# ArkanaStore

./: .gitignore  ANALISE_COMPLETA_ARKHANASTORE.md  Analisar_Conversa_Whatsapp.py  CHECKLIST_REORGANIZACAO.md  CNAME  Cargo.toml  DEPLOY_AZURE.md  ENTREGA_FINAL_ARKANA.md  ESTRUTURA_PROJETO.md  FORMULARIO_CADASTRO_OBRIGATORIO.md  GITHUB_SECRETS_REQUIRED.md  GUIA_INSTALACAO_EXECUCAO.md  IDENTIDADE_VISUAL_ARKANA_REAL.md  O_QUE_ESTA_FUNCIONANDO_AGORA.md  PAINEL_ADMIN_COMPLETO.md  PLANO_CUSTOMIZACAO_MODULOS_AVILAINC.md  README.md  README_RUST_WASM.md  RESUMO_CONFIG_PAGAMENTOS.md  RESUMO_CUSTOMIZACAO_MODULOS.md  RESUMO_FINAL_ANALISE_REORGANIZACAO.md  SETUP_AZURE_AGORA.md  SISTEMA_V2_SQLITE_CAMPANHAS.md  SITE_PRONTO_COM_TOGGLE.md  TROUBLESHOOTING_GITHUB_ACTIONS.md  arkana-admin-panel.html  arkana-store-landing.html  arkana-store-v2.html  commit-message-azure.txt  commit-message-design.txt  docker-compose.avila-full.yml  email-hastek-nex.html  enviar-email-hastek.py
.github/workflows/: azure-deploy.yml  ci.yml  deploy.yml  docker-publish.yml  pages.yml  send-email.yml  static.yml
Arkana_Logs_Pack/Apps/Web/: Sentry.Client.Config.ts  Sentry.Server.Config.ts
Arkana_Logs_Pack/Config/: Alerts.kql
Arkana_Logs_Pack/Infra/: Azure_Logs.bicep
Arkana_Logs_Pack/Runbooks/: Helix_Runbook.md
Avila_Inc_Padrao_Atendimento/: .Gitignore  Changelog.md  Contributing.md  Padrao_Atendimento_Excelencia.md  Quick_Start.md  Readme_Avila_Inc_Padrao_Atendimento.md  Sumario_Executivo.md
Avila_Inc_Padrao_Atendimento/Clientes/Arkana_Store/: Dossie.md  Dossie_Atendimento_Completo.md  Historico_Atendimento.md  (+5 more)
Avila_Inc_Padrao_Atendimento/Ia_Assistiva/: Analisar_Email.py  Prompts_Atendimento.md
Avila_Inc_Padrao_Atendimento/Scripts/: Caso_Critico.md  Primeiro_Contato.md
arkana-backend/: Cargo.toml  Dockerfile
arkana-backend/src/: config.rs  db.rs  main.rs  services.rs  webhooks.rs
arkana-backend/src/handlers/: cart.rs  mod.rs  orders.rs  products.rs
arkana-backend/src/webhooks/: mercadopago.rs  paypal.rs  stripe.rs
arkana-frontend/: Cargo.toml  Dockerfile  Trunk.toml  index.html
arkana-frontend/src/: lib.rs
arkana-frontend/src/pages/: home.rs  mod.rs
arkana-frontend/src/pages/components/: footer.rs  header.rs
arkana-frontend/static/: styles.css
arkana-shared/: Cargo.toml
arkana-shared/src/: lib.rs
automation/admin/: api_server.py  arkana_admin_backend.py  arkana_database.py  requirements.txt
automation/utilities/: gravatar_service.py
config/: .env.arkana.template
docs/: index.html  styles.css
infra/: README.md  main.bicep  main.parameters.json
monitoring/prometheus/: prometheus.yml
scripts/: backup-to-onedrive.sh  build.ps1  deploy-azure.ps1  test-arkana-system.ps1
scripts/reorganization/: reorganize-project.ps1  validate-structure.ps1
(+3 files in other folders)
