[package]
name = "arkana-backend"
version.workspace = true
edition.workspace = true
authors.workspace = true

[[bin]]
name = "arkana-api"
path = "src/main.rs"

[dependencies]
# Workspace shared
arkana-shared = { path = "../arkana-shared" }

# Web framework
actix-web.workspace = true
actix-cors.workspace = true

# Async
tokio.workspace = true
async-trait.workspace = true

# Serialization
serde.workspace = true
serde_json.workspace = true

# Database
sqlx.workspace = true
mongodb.workspace = true

# HTTP client
reqwest.workspace = true

# Auth & Security
jsonwebtoken.workspace = true
bcrypt.workspace = true
uuid.workspace = true

# Logging
tracing.workspace = true
tracing-subscriber.workspace = true
sentry.workspace = true
sentry-actix = "0.32"

# Config
dotenv.workspace = true
config.workspace = true

# Time
chrono.workspace = true

# Env vars
envy = "0.4"
