[package]
name = "arkana-frontend"
version.workspace = true
edition.workspace = true
authors.workspace = true

[lib]
crate-type = ["cdylib", "rlib"]

[dependencies]
# Workspace shared
arkana-shared = { path = "../arkana-shared" }

# Yew framework
yew.workspace = true
yew-router.workspace = true

# WASM
wasm-bindgen.workspace = true
wasm-bindgen-futures.workspace = true

# Browser APIs
web-sys.workspace = true
gloo.workspace = true
gloo-net.workspace = true

# Serialization
serde.workspace = true
serde_json.workspace = true

# Utils
uuid.workspace = true
chrono.workspace = true

[dependencies.web-sys]
version = "0.3"
features = [
    "Window",
    "Document",
    "HtmlElement",
    "HtmlInputElement",
    "HtmlSelectElement",
    "Storage",
    "Location",
    "console",
]
